--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-mailer": "^0.1.1",
     "react": "^18",
     "react-canvas-confetti": "^2.0.7",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
